[package]
name = "JWKS-Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
rsa = "0.9.2"
rand = "0.8.5"
base64 = "0.21.4"
chrono = "0.4.31"
jsonwebtoken = "8.3.0"
jwt-simple = "0.11.7"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
